name:                opnun
version:             0.0.1.0
synopsis:            Web scraper for opening hours
description:         Scrape enterprise opening hours from select few supported websites.
homepage:            https://github.com/bjartur/opnun#readme
license:             BSD3
license-file:        LICENSE
author:              Bjartur Thorlacius
maintainer:          bjartur@piratar.is
copyright:           2016 Bjartur Thorlacius
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable opnun
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scalpel >= 0.2.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjartur/opnun
